--- a/src/App.css
+++ b/src/App.css
@@ -89,3 +89,15 @@ thead th {
   overflow-x: hidden;
   padding-left: 20px;
 }
+
+.pagination {
+  margin-top: 10px;
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+}
+
+.pagination button {
+  padding: 5px 10px;
+  cursor: pointer;
+}
