--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 10px;
   font-family: 'Figtree', Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
@@ -31,7 +31,7 @@ body {
   flex: 1;
   display: flex;
   padding: 20px;
-  margin: 20px 0;
+  margin: 0px 0;
 }
 
 .sidebar {
@@ -80,7 +80,7 @@ thead th {
   flex: 1;
   overflow-y: auto;
   overflow-x: hidden;
-  padding-left: 0;
+  padding-left: 20px;
 }
 
 .pagination {
