--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
 }
 
 .top-bar {
-  background: #fff;
+  background: #d3d1d169;
   color: #000;
   padding: 10px 20px;
   font-size: 1.5rem;
@@ -35,7 +35,7 @@ body {
 }
 
 .sidebar {
-  width: 150px;
+  width: 260px;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -45,10 +45,13 @@ body {
 }
 
 .sidebar button {
-  padding: 10px;
+  width: 90%;
+  align-self: center;
+  padding: 5px;
+  margin: 5px 0;
   background: #fff;
   color: #000;
-  border: 1px solid #ccc;
+  border: 1px solid #949494;
   border-radius: 4px;
   cursor: pointer;
 }
@@ -119,7 +122,9 @@ tr.selected {
 }
 
 .sidebar input {
+  width: 100%;
   padding: 5px;
   border: 1px solid #ccc;
   border-radius: 4px;
+  background-color: #afafaf8a;
 }
