--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@ body {
   display: flex;
   align-items: center;
   border-bottom: 1px solid #ccc;
+  border-radius: 10px;;
 }
 
 .top-bar img {
@@ -107,12 +108,15 @@ thead th {
 
 .pagination {
   margin-top: 10px;
+  border-radius: 10px;
   display: flex;
   gap: 10px;
+  align-items: center;
   justify-content: center;
 }
 
 .pagination button {
+  border-radius: 10px;
   padding: 5px 10px;
   cursor: pointer;
 }
