--- a/src/App.css
+++ b/src/App.css
@@ -187,3 +187,10 @@ tr.selected {
   white-space: nowrap;
   gap: 0px;
 }
+
+.separator {
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  margin: 10px 0;
+}
