--- a/mobileApp/app/src/main/res/values/colors.xml
+++ b/mobileApp/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue_primary">#FF1565C0</color>
+    <color name="table_row_background">#FFF4F6FB</color>
 </resources>
